Version 1.0.1
- Added 3d-beacon info

Version 1.0.0
- Initial release